--- a/js12_kmeans.ipynb
+++ b/js12_kmeans.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Nama  : Muhammad Abdul Aziz\n",
+    "### NIM   : 2241727023\n",
+    "### Kelas : TI-4J"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# K-Means\n",
     "\n",
     "Capaian Pembelajaran\n",
