--- a/js12_kmeans.ipynb
+++ b/js12_kmeans.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Nama  : Muhammad Abdul Aziz\n",
-    "### NIM   : 2241727023\n",
-    "### Kelas : TI-4J"
+    "Muhammad Abdul Aziz\n",
+    "2241727023\n",
+    "TI-4J"
    ]
   },
   {
